2003-05-06  David Hyatt  <hyatt@apple.com>

	The purpose of this patch is to unify XML and HTML documents' root
	element handling.  Instead of having a special RenderHTML object
	for dealing with <html>, root element handling is now done in
	base classes so that it works with XML documents as well.

	The changes include:
	  * Rename RenderRoot to RenderCanvas to more accurately
	    reflect what this RenderObject represents in CSS2.
	  * Rename root() to canvas()
	  * Rename isHtml() to isRoot()
	  * Rename isRoot() to isCanvas().
	  * Eliminate RenderHTML and fold its functionality into base
	    classes (RenderBlock and RenderBox).
	  * isRoot() now means "are you the RenderObject for the root
	    element".  All isHtml() callers now say isRoot() instead.
	  
        Reviewed by gramps

        * ForwardingHeaders/rendering/render_canvas.h: Added.
        * ForwardingHeaders/rendering/render_html.h: Removed.
        * ForwardingHeaders/rendering/render_root.h: Removed.
        * WebCore.pbproj/project.pbxproj:
        * khtml/ecma/kjs_dom.cpp:
        * khtml/ecma/kjs_window.cpp:
        * khtml/html/html_baseimpl.cpp:
        (HTMLHtmlElementImpl::id):
        * khtml/html/html_baseimpl.h:
        * khtml/khtmlview.cpp:
        (KHTMLView::layout):
        (KHTMLView::print):
        (KHTMLView::slotPaletteChanged):
        (KHTMLView::paint):
        (KHTMLView::timerEvent):
        * khtml/khtmlview.h:
        * khtml/rendering/render_applet.cpp:
        * khtml/rendering/render_block.cpp:
        * khtml/rendering/render_block.h:
        * khtml/rendering/render_body.cpp:
        * khtml/rendering/render_box.cpp:
        (RenderBox::setStyle):
        (RenderBox::paintRootBoxDecorations):
        (RenderBox::paintBoxDecorations):
        (RenderBox::paintBackgroundExtended):
        (RenderBox::containingBlockWidth):
        (RenderBox::repaint):
        (RenderBox::calcHeight):
        (RenderBox::availableHeight):
        (RenderBox::calcAbsoluteVertical):